# tree-sitter-cdl

./: CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml  lint.yaml
bindings/c/: tree-sitter-cdl.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cdl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCdl/: cdl.h
bindings/swift/TreeSitterCdlTests/: TreeSitterCdlTests.swift
doc/: README.md  develop.md  roadmap.md  text-editors.md  tree-sitter-config.json
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: attributes.txt  basic.cdl  basic.txt  data.txt  derived_types.txt  dimensions.txt  general_syntax.txt  groups.txt  identifiers.txt  primitive_types.txt  types.txt  variables.txt
