[package]
name = "tree-sitter-cdl"
description = "Tree-sitter grammar for the Common Data Language for representing NetCDF data."
version = "0.1.0"
authors = ["Jack Atkinson <jack.atkinson1000@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "cdl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jatkinson1000/tree-sitter-cdl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
